apps/staging/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:v1.0.0
          ports:
            - containerPort: 7575
          volumeMounts:
            - name: data
              mountPath: /appdata
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homarr-data
