apps/staging/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: media
spec:
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: 7575
